--- a/history/socmed/templates/socmed/home.html
+++ b/history/socmed/templates/socmed/home.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forum</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='socmed/home.css')}}">
-</head>
-<body>
-    <main>
+{% extends 'socmed.html' %}
 
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='socmed/home.css')}}">
+<style>
+    .post-container {
+        background: orange;
+    }
+</style>
+<title>Forum</title>
+{% endblock %}
+{% block body %}
+    <main> 
+
+    <div class="left"></div>
     <div class="socmed">
 
         <form action="" class="form-group" method="POST">
@@ -32,9 +36,6 @@
     </form>
     {% for p in posts %}
         <div class="post-container">
-            
-           
-
             <div class="post-container">
                 <div class="post">
                     {{ p }}
@@ -44,7 +45,8 @@
         </div>
         {% endfor %}
     </div>
+
+    <div class="right"></div>
 </main>
 
-</body>
-</html>
+{% endblock %}
