--- a/history/main/templates/hero/hero.html
+++ b/history/main/templates/hero/hero.html
@@ -91,7 +91,10 @@
       <label class="book__page book__page--2">
         <div class="book__page-front">
           <div class="page__content">
-            <h1 class="page__content-book-title">DR. JOSE RIZAL</h1>
+            <h1 class="page__content-book-title">{{ hero.name }}
+
+
+            </h1>
             <h2 class="page__content-author"></h2>
             
             <p class="page__content-credits">
