--- a/history/main/templates/lessons/unit1/lesson1.html
+++ b/history/main/templates/lessons/unit1/lesson1.html
@@ -37,15 +37,17 @@
 
 
 <div class="audio-player" >
-	<audio id="audio" >
-		<source src="./lessons/unit1/swamp.ogg" id="audio-source">
-	</audio>
-	<div class="controls">
-		<button id="play-pause" class="play">Play</button>
-		<input type="range" id="seek-bar" value="0">
-		<button id="mute">Mute</button>
-		<input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
-	</div>
+	<div class="audio-container">
+        <audio id="audioPlayer" controls>
+            <source src="{{ url_for('static', filename='audio/oss.mp3') }}" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+        <div class="controls">
+            <button onclick="playAudio()">Play</button>
+            <button onclick="pauseAudio()">Pause</button>
+            <button onclick="stopAudio()">Stop</button>
+        </div>
+    </div>
 	</div>
 
 <!-- CONTENTS -->	
@@ -93,4 +95,20 @@ Katulad ng RH Bill, hindi naging madali ang pagpasa ng batas na ito dahil sa mal
 
 <script src="{{ url_for('static', filename='units/unit1/lesson1.js')}}"></script>
 
+
+<script>
+    
+function playAudio() {
+    audioPlayer.play();
+}
+
+function pauseAudio() {
+    audioPlayer.pause();
+}
+
+function stopAudio() {
+    audioPlayer.pause();
+    audioPlayer.currentTime = 0;
+}
+</script>
 {% endblock %}
