--- a/history/main/templates/hero/heroes.html
+++ b/history/main/templates/hero/heroes.html
@@ -82,7 +82,7 @@ body {
   align-items: flex-end;
   gap: 3rem;
   position: relative;
-  height: var(--height);
+  height: var(--height) *1rem;
   padding-bottom: 0.8rem;
   box-sizing: border-box;
   box-shadow: inset 0 10px 10px 0 var(--shadow-color, var(--color-shelf-shadow));
@@ -93,6 +93,7 @@ body {
   width: 7rem;
   background: white;
   display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 3px 0 black, 0 1px 2px -1px black;
@@ -102,6 +103,9 @@ body {
   height: 1rem;
   width: 100%;
   background: var(--color-shelf-bottom-panel-front);
+}
+.book:last-child {
+  margin-right: 2rem;
 }
 </style>
 
@@ -120,10 +124,13 @@ body {
 	  </div>
 	</div>
 	<div class="books-container">
-	  <div class="book">Book 1</div>
-	  <div class="book">Book 2</div>
+    {% for hero in heroes %}
+    <a href="{{ hero.name }}"></a>
+	  <div class="book">{{ hero.name }}</div>
+    {% endfor %}
+	  <!-- <div class="book">Book 2</div>
 	  <div class="book">Book 3</div>
-	  <div class="book">Book 4</div>
+	  <div class="book">Book 4</div> -->
 	</div>
 	<div class="floor-thickness"></div>
   </section>
