--- a/history/main/templates/lessons/lessons.html
+++ b/history/main/templates/lessons/lessons.html
@@ -11,14 +11,16 @@
 			<section class="content-section">
 			
 
-				{% for uni in unit %}
+				{% for uni in unit.lesson_key %}
+				<a href="{{ url_for('.lesson', unit=unit.id, pk=uni.id) }}">
 				<div class="content-item">
 					<img src="{{ url_for('static', filename='PICS/unit1/01-rizal.jpg')}}" alt="Image 1">
-					<p id="TOPIC 1"><b>{{ unit.unit_title }}</b><br>
+					<p id="TOPIC 1"><b>{{ uni.title }}</b><br>
 					{{ unit.description }} </p>
 					</div>
+				</a>
 				{% endfor %}
-			<div class="content-item">
+			<!-- <div class="content-item">
 			<img src="{{ url_for('static', filename='PICS/unit1/01-rizal.jpg')}}" alt="Image 1">
 			<p id="TOPIC 1"><b>UNIT 1:</b><br>
 			Factors that Contributed in Rizal's Becoming a Great Man and a Hero </p>
@@ -108,7 +110,7 @@
 			<img src="{{ url_for('static', filename='PICS/ktz.jpg')}}" alt="Image 3">
 			<p id="TOPIC 15"><b>LESSON 15: SHIBUYA INCIDENT</b><br>
 			Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description </p>
-			</div>
+			</div> -->
 
 			</section>
 			</main>
