--- a/history/main/templates/lessons/lessons.html
+++ b/history/main/templates/lessons/lessons.html
@@ -8,6 +8,11 @@
 	
 <!-- CONTENTS -->
 			<main id="mainContent">
+
+				<div class="container-unit">
+					<h2>{{ unit.unit_title }}</h2>
+					<p>{{ unit.description }}</p>
+				</div>
 			<section class="content-section">
 			
 
