--- a/history/auth/templates/signup.html
+++ b/history/auth/templates/signup.html
@@ -29,6 +29,7 @@
     {% endwith %}
     </ul>
 </div>
+    <div class="signup-wrapper">
 
     <div class="signup-container">
         <h2>Create an Account</h2>
@@ -60,8 +61,10 @@
                 {{ forms.submit }}
             </div>
         </form>
-        <p>Already have an account? <a href="{{ url_for('/auth.login')}}">Login here</a>.</p>
+        <p>Already have an account? <a href="{{ url_for('/auth.login')}}">Login here</a></p>
     </div>
+</div>
+
 
 </main>
 
