--- a/history/main/templates/base.html
+++ b/history/main/templates/base.html
@@ -211,7 +211,7 @@
 			</div>
 	
 			<div class="username">
-			<p>username</p>
+			<p>{{ current_user.username }}</p>
 			</div>
     
 			 <div class="user-actions">
