--- a/history/main/templates/hero/bookshelf.html
+++ b/history/main/templates/hero/bookshelf.html
@@ -1,231 +1,7 @@
 {% extends 'base.html'%}
 
 {% block css %}
-<style>
-    body {
-  margin: 0 auto;
-  width: 600px;
-}
-
-:root {
-    --spine-pyramid: linear-gradient(
-      315deg,
-      transparent 75%,
-      rgba(255, 255, 255, 0.1) 0
-      ),
-      linear-gradient(
-        45deg,
-         transparent 75%,
-          rgba(255, 255, 255, 0.1) 0
-      ),
-      linear-gradient(
-        135deg,
-        rgba(255, 255, 255, 0.2) 166px,
-        transparent 0
-      ),
-      linear-gradient(
-        45deg,
-        rgba(0, 0, 0, 0.1) 75%,
-        transparent 0
-      );
-      background-size: 20px 20px;
-    --spine-stairs: repeating-linear-gradient(
-        63deg,
-        rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0.1) 1px,
-        transparent 3px,
-        transparent 0
-      ),
-      linear-gradient(
-        127deg,
-        rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0.1) 90px,
-        transparent 55%,
-        transparent 0
-      ),
-      linear-gradient(
-        transparent 51%,
-        rgba(0, 0, 0, 0.1) 170px
-      );
-      background-size: 70px 120px;
-    --spine-argyle: repeating-linear-gradient(
-        120deg,
-        rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0.1) 1px,
-        transparent 1px,
-        transparent 60px
-      ),
-      repeating-linear-gradient(
-        60deg,
-        rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0.1) 1px,
-        transparent 1px,
-        transparent 60px
-      ),
-      linear-gradient(
-        60deg,
-        rgba(0, 0, 0, 0.1) 25%,
-        transparent 25%,
-        transparent 75%,
-        rgba(0, 0, 0, 0.1) 75%,
-        rgba(0, 0, 0, 0.1)
-      ),
-      linear-gradient(
-        120deg,
-        rgba(0, 0, 0, 0.1) 25%,
-        transparent 25%,
-        transparent 75%,
-        rgba(0, 0, 0, 0.1) 75%,
-        rgba(0, 0, 0, 0.1)
-      );
-    background-size: 70px 120px;
-    --spine-tartan: repeating-linear-gradient(
-        transparent,
-        transparent 50px,
-        rgba(0, 0, 0, 0.4) 50px,
-        rgba(0, 0, 0, 0.4) 53px,
-        transparent 53px,
-        transparent 63px,
-        rgba(0, 0, 0, 0.4) 63px,
-        rgba(0, 0, 0, 0.4) 66px,
-        transparent 66px,
-        transparent 116px,
-        rgba(0, 0, 0, 0.5) 116px,
-        rgba(0, 0, 0, 0.5) 166px,
-        rgba(255, 255, 255, 0.2) 166px,
-        rgba(255, 255, 255, 0.2) 169px,
-        rgba(0, 0, 0, 0.5) 169px,
-        rgba(0, 0, 0, 0.5) 179px,
-        rgba(255, 255, 255, 0.2) 179px,
-        rgba(255, 255, 255, 0.2) 182px,
-        rgba(0, 0, 0, 0.5) 182px,
-        rgba(0, 0, 0, 0.5) 232px,
-        transparent 232px
-      ),
-      repeating-linear-gradient(
-        270deg,
-        transparent,
-        transparent 50px,
-        rgba(0, 0, 0, 0.4) 50px,
-        rgba(0, 0, 0, 0.4) 53px,
-        transparent 53px,
-        transparent 63px,
-        rgba(0, 0, 0, 0.4) 63px,
-        rgba(0, 0, 0, 0.4) 66px,
-        transparent 66px,
-        transparent 116px,
-        rgba(0, 0, 0, 0.5) 116px,
-        rgba(0, 0, 0, 0.5) 166px,
-        rgba(255, 255, 255, 0.2) 166px,
-        rgba(255, 255, 255, 0.2) 169px,
-        rgba(0, 0, 0, 0.5) 169px,
-        rgba(0, 0, 0, 0.5) 179px,
-        rgba(255, 255, 255, 0.2) 179px,
-        rgba(255, 255, 255, 0.2) 182px,
-        rgba(0, 0, 0, 0.5) 182px,
-        rgba(0, 0, 0, 0.5) 232px,
-        transparent 232px
-      ),
-      repeating-linear-gradient(
-        125deg,
-        transparent,
-        transparent 2px,
-        rgba(0, 0, 0, 0.2) 2px,
-        rgba(0, 0, 0, 0.2) 3px,
-        transparent 3px,
-        transparent 5px,
-        rgba(0, 0, 0, 0.2) 5px
-      );
-  }
-  
-  .bookshelf {
-    width: 100%;
-    height: 320px;
-    margin-top: 32px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #826c59;
-    background-image: url("https://www.transparenttextures.com/patterns/wood-pattern.png");
-  }
-  
-  .book {
-    width: 50px;
-    height: 280px;
-    position: relative;
-    margin-left: 5px;
-    top: 30px;
-    transform-style: preserve-3d;
-    transform: translateZ(0) rotateY(0);
-    transition: transform 1s;
-  }
-  
-  .side {
-    position: absolute;
-    border: 2px solid black;
-    border-radius: 3px;
-    font-weight: bold;
-    color: black;
-    text-align: center;
-    transform-origin: center left;
-  }
-  
-  .spine {
-    position: relative;
-    width: 50px;
-    height: 280px;
-    /* Patterns from: https://projects.verou.me/css3patterns/ */
-    background-image: var(--tartan);
-    transform: rotateY(0deg) translateZ(0px);
-  }
-  
-  .spine-title {
-    margin: 2px;
-    position: absolute;
-    top: 5px;
-    left: 0px;
-    font-size: 15px;
-    color: gold;
-    writing-mode: vertical-rl;
-    text-orientation: sideways;
-  }
-  
-  .spine-author {
-    position: absolute;
-    color: goldenrod;
-    bottom: 0px;
-    left: 0%; /* no idea why 20% centers it */
-    font-size: 10px;    
-  }
-  
-  .top {
-    width: 50px;
-    height: 190px;
-    top: -2px;  /* hmm, why -2 and not 0? */
-    background-image: linear-gradient(90deg, white 90%, gray 10%);
-    background-size: 5px 5px;
-    transform: rotateX(90deg) translateZ(95px) translateY(-95px);
-  }
-  
-  .cover {
-    width: 190px;
-    height: 280px;
-    top: 0px;
-    background-image: url("https://picsum.photos/190/280");
-    background-size: contain;
-    background-repeat: round;
-    left: 50px;
-    transform: rotateY(90deg) translateZ(0);
-    transition: transform 1s;
-  }
-  
-  .book:hover {
-    z-index: 1;
-    transform: rotateX(-25deg) rotateY(-40deg) rotateZ(-15deg) translateY(50px)
-      translateX(-30px);
-  }
-  
-
-</style>
+<link rel="stylesheet" href="{{ url_for('static', filename='hero/bookshelf.css')}}">
 {% endblock %}
 {% block main %}
     <div class="bookshelf">
@@ -287,41 +63,37 @@
       
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> Catch-22 </span>
-          <span class="spine-author"> Joseph Heller </span>
+          <span class="spine-title"> Tim burnik </span>
+          <span class="spine-author"> Allen kalbo </span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
-             style="background-image: url(https://m.media-amazon.com/images/I/61gaZF+DIHL._SL200_.jpg);cursor:pointer;"> 
+             style="background-image: url(https://th.bing.com/th?id=OIP.JdR3BTbHuGbrE1S5pLkxhgHaE7&w=306&h=203&c=8&rs=1&qlt=90&r=0&o=6&dpr=1.3&pid=3.1&rm=2);cursor:pointer;"> 
         </div>
       </div>
       
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> The Great Gatsby </span>
-          <span class="spine-author"> F. Scott Fitzgerald </span>
+          <span class="spine-title"> Jhay </span>
+          <span class="spine-author"> Mhikey</span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
-             style="background-image: url(https://m.media-amazon.com/images/I/81QuEGw8VPL._SL200_.jpg);cursor:pointer;"> 
+             style="background-image: url(https://th.bing.com/th?id=OIP.MyArgq8ICNcZyI4tngVbyAAAAA&w=205&h=304&c=8&rs=1&qlt=90&r=0&o=6&dpr=1.3&pid=3.1&rm=2);cursor:pointer;"> 
         </div>
       </div>
 
       <div class="book">
         <div class="side spine ">
-          <span class="spine-title"> Brave New World </span>
-          <span class="spine-author"> Aldous Huxley </span>
+          <span class="spine-title"> National Hero</span>
+          <span class="spine-author"> Utak ng Himagsikan </span>
         </div>
         <div class="side top"></div>
         <div class="side cover" 
-             style="background-image: url(https://m.media-amazon.com/images/I/81zE42gT3xL._SL200_.jpg);cursor:pointer;"> 
+             style="background-image: url(https://th.bing.com/th?id=OIP.f8PiWvsC--x99565I6wB0QHaNK&w=187&h=333&c=8&rs=1&qlt=90&r=0&o=6&dpr=1.3&pid=3.1&rm=2);cursor:pointer;"> 
         </div>
       </div>
       <script>
-
-      </script>
- {% endblock %}
-
 function getRandomInt(min, max) {
   min = Math.ceil(min);
   max = Math.floor(max);
@@ -370,3 +142,6 @@ spines.map(function (s, i) {
 
   tops[i].style.top = `${280 - randomHeight}px`;
 });
+      </script>
+ {% endblock %}
+
