added trivia site

--- a/history/main/templates/base_lesson.html
+++ b/history/main/templates/base_lesson.html
@@ -306,8 +306,9 @@
  
 <div class="audio-player" >
 
-    DEMO AND WORKING test -> audio/{{pk}}/{{ unit }}
-    {{ path }}
+    <!-- DEMO AND WORKING test -> audio/{{pk}}/{{ unit }} -->
+    <!-- {{ path }} -->
+      <h4>Audio Podcast for Lesson {{ pk }}</h4>
 	<audio id="audio" >
         <source src="{{ url_for('static', filename=path) }}" type="audio/mpeg">
 
@@ -322,6 +323,8 @@
             {% block main %}
             {% endblock %}
 
+
+            
            
             <div class="comment-section" fa>
 
