--- a/history/main/templates/lessons/unit1/lesson1.html
+++ b/history/main/templates/lessons/unit1/lesson1.html
@@ -53,6 +53,11 @@
 
 <!-- CONTENTS -->	
 			<main id="mainContent">
+
+                <div class="lesson-content">
+                    <h1>Actual lesson content tests </h1>
+                    {{ lesson }}
+                </div>
 				
     <section class="content-section">
 	     <h2 id="unit1">UNIT 1</h2>
