finishing timeline, additional seach query and trivia

--- a/history/main/templates/base_lesson.html
+++ b/history/main/templates/base_lesson.html
@@ -114,24 +114,21 @@
 			<li><label class="label1"> TABLE OF CONTENTS</label></li><hr>
 			
             <ul>
-                {% for unit in units%}
+                <!-- {% for unit in units%}
 
             
             <li>
                 <a href="#mainContent">{{ unit.unit_title }}</a>
                 <div class="topic-buttons">
-                    {% for subtopic in unit.lesson_key %}
-                    <button class="dropdown-btn">{{ subtopic}}</button>
-
-                    {% endfor %}
+               
                   <button class="dropdown-btn">Subtopic 2</button>
                   <button class="dropdown-btn">Subtopic 3</button>
               </div>
             </li>
-                          {% endfor %}
+                          {% endfor %} -->
 
 
-    <a href="#mainContent">UNIT 1</a>
+    <a href="#mainContent">UNIT asda1</a>
     <!-- Toggle dropdown buttons -->
     <div class="topic-buttons">
         <button class="dropdown-btn">Subtopic 1</button>
