Trying to add baybayin function

--- a/history/main/templates/hero/hero.html
+++ b/history/main/templates/hero/hero.html
@@ -6,7 +6,7 @@
 
 
 {% block main %}
-<div class="content-container">
+<!-- <div class="content-container">
     <img src="https://preview.redd.it/i-want-to-print-a-poster-a2-or-a3-of-lotm-any-suggestions-v0-smyeaj5g3pib1.jpg?width=1520&amp;format=pjpg&amp;auto=webp&amp;s=806cbbbf110250a1d23090f370aacac334c4d34a" alt="I want to print a poster ( A2 or A3 ) of LoTM. Any ..."/>
     
   <div class="img-prof">
@@ -15,7 +15,7 @@
       <p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt in alias architecto corrupti! Quaerat error quia qui amet laudantium. Dolores tenetur tempora minus totam illum, suscipit soluta maiores repudiandae eligendi illo consequatur. Maiores accusamus nam vel obcaecati vero earum recusandae, iusto architecto ipsum dolores veritatis? Dignissimos deserunt doloribus ipsa consequuntur.</p>
     </div>
   </div>
-  </div>
+  </div> -->
   
   <main>
     <aside>
